--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@ background: -webkit-linear-gradient(-45deg, #8f37ff 0%,#2d3aef 100%); /* Chrome1
 background: linear-gradient(135deg, #8f37ff 0%,#2d3aef 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8f37ff', endColorstr='#2d3aef',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */ 
 color: #fff;    
+    margin-bottom: 20px;
+}
+
+.shadow {
+text-shadow: #065DAE 1px 1px,#065DAE -0px 0px,#065DAE -1px 1px,#065DAE -2px 2px,#065DAE -3px 3px,#065DAE -4px 4px,#065DAE -5px 5px,#065DAE -6px 6px,#065DAE -7px 7px,#065DAE -8px 8px,#065DAE -9px 9px,#065DAE -10px 10px,#065DAE -11px 11px,#065DAE -12px 12px,#065DAE -13px 13px,#065DAE -14px 14px,#065DAE -15px 15px,#065DAE -16px 16px,#065DAE -17px 17px,#065DAE -18px 18px,#065DAE -19px 19px,#065DAE -20px 20px,#065DAE -21px 21px,#065DAE -22px 22px,#065DAE -23px 23px,#065DAE -24px 24px,#065DAE -25px 25px,#065DAE -26px 26px,#065DAE -27px 27px,#065DAE -28px 28px,#065DAE -29px 29px,#065DAE -30px 30px,#065DAE -31px 31px,#065DAE -32px 32px,#065DAE -33px 33px,#065DAE -34px 34px,#065DAE -35px 35px,#065DAE -36px 36px,#065DAE -37px 37px,#065DAE -38px 38px,#065DAE -39px 39px,#065DAE -40px 40px,#065DAE -41px 41px,#065DAE -42px 42px,#065DAE -43px 43px,#065DAE -44px 44px,#065DAE -45px 45px,#065DAE -46px 46px,#065DAE -47px 47px,#065DAE -48px 48px,#065DAE -49px 49px,#065DAE -50px 50px,#065DAE -51px 51px,#065DAE -52px 52px,#065DAE -53px 53px,#065DAE -54px 54px,#065DAE -55px 55px,#065DAE -56px 56px,#065DAE -57px 57px,#065DAE -58px 58px,#065DAE -59px 59px,#065DAE -60px 60px,#065DAE -61px 61px,#065DAE -62px 62px,#065DAE -63px 63px,#065DAE -64px 64px,#065DAE -65px 65px,#065DAE -66px 66px,#065DAE -67px 67px,#065DAE -68px 68px,#065DAE -69px 69px,#065DAE -70px 70px,#065DAE -71px 71px,#065DAE -72px 72px,#065DAE -73px 73px,#065DAE -74px 74px,#065DAE -75px 75px,#065DAE -76px 76px,#065DAE -77px 77px,#065DAE -78px 78px,#065DAE -79px 79px,#065DAE -80px 80px,#065DAE -81px 81px,#065DAE -82px 82px,#065DAE -83px 83px,#065DAE -84px 84px,#065DAE -85px 85px,#065DAE -86px 86px,#065DAE -87px 87px,#065DAE -88px 88px,#065DAE -89px 89px,#065DAE -90px 90px,#065DAE -91px 91px,#065DAE -92px 92px,#065DAE -93px 93px,#065DAE -94px 94px,#065DAE -95px 95px,#065DAE -96px 96px,#065DAE -97px 97px,#065DAE -98px 98px,#065DAE -99px 99px,#065DAE -100px 100px,#065DAE -101px 101px,#065DAE -102px 102px,#065DAE -103px 103px,#065DAE -104px 104px,#065DAE -105px 105px,#065DAE -106px 106px,#065DAE -107px 107px,#065DAE -108px 108px,#065DAE -109px 109px,#065DAE -110px 110px,#065DAE -111px 111px,#065DAE -112px 112px,#065DAE -113px 113px,#065DAE -114px 114px,#065DAE -115px 115px,#065DAE -116px 116px,#065DAE -117px 117px,#065DAE -118px 118px,#065DAE -119px 119px,#065DAE -120px 120px,#065DAE -121px 121px,#065DAE -122px 122px,#065DAE -123px 123px,#065DAE -124px 124px,#065DAE -125px 125px,#065DAE -126px 126px,#065DAE -127px 127px,#065DAE -128px 128px,#065DAE -129px 129px,#065DAE -130px 130px,#065DAE -131px 131px,#065DAE -132px 132px,#065DAE -133px 133px,#065DAE -134px 134px,#065DAE -135px 135px,#065DAE -136px 136px,#065DAE -137px 137px,#065DAE -138px 138px,#065DAE -139px 139px,#065DAE -140px 140px,#065DAE -141px 141px,#065DAE -142px 142px,#065DAE -143px 143px,#065DAE -144px 144px,#065DAE -145px 145px,#065DAE -146px 146px,#065DAE -147px 147px,#065DAE -148px 148px,#065DAE -149px 149px,#065DAE -150px 150px,#065DAE -151px 151px,#065DAE -152px 152px,#065DAE -153px 153px,#065DAE -154px 154px,#065DAE -155px 155px,#065DAE -156px 156px,#065DAE -157px 157px,#065DAE -158px 158px,#065DAE -159px 159px,#065DAE -160px 160px,#065DAE -161px 161px,#065DAE -162px 162px,#065DAE -163px 163px,#065DAE -164px 164px,#065DAE -165px 165px,#065DAE -166px 166px,#065DAE -167px 167px,#065DAE -168px 168px,#065DAE -169px 169px,#065DAE -170px 170px,#065DAE -171px 171px,#065DAE -172px 172px,#065DAE -173px 173px,#065DAE -174px 174px,#065DAE -175px 175px,#065DAE -176px 176px,#065DAE -177px 177px,#065DAE -178px 178px,#065DAE -179px 179px,#065DAE -180px 180px,#065DAE -181px 181px,#065DAE -182px 182px,#065DAE -183px 183px,#065DAE -184px 184px,#065DAE -185px 185px,#065DAE -186px 186px,#065DAE -187px 187px,#065DAE -188px 188px,#065DAE -189px 189px,#065DAE -190px 190px,#065DAE -191px 191px,#065DAE -192px 192px,#065DAE -193px 193px,#065DAE -194px 194px,#065DAE -195px 195px,#065DAE -196px 196px,#065DAE -197px 197px,#065DAE -198px 198px,#065DAE -199px 199px;
 }
 
 .header1 {
@@ -99,21 +104,18 @@ label.item.valid-lr {
 }
 
 /** Styling for the Algolia Logo **/
-.float-algolia {
-background-color: #000;
-opacity: 0.7;
+.float-background {
+background-color: #fff;
 border-radius: 0px; 
-    border-bottom: 10px;
-    border-bottom-color: aliceblue;
-padding: 2px;
+padding: 20px;
 position: fixed;
-bottom: 8%;
+bottom: 0px;
 left: 0px;
 right: 0px;
 z-index: 1000;
 }
 
-.float-algolia .height_fix {
+.float-background .height_fix {
   margin-top: 100%;
   border: 1px solid #FFF;
 }
@@ -254,4 +256,401 @@ body {
 #search-header input {
    font-size: 1em;
    text-decoration: underline;
+}
+
+
+/*neutral*/
+* {
+	font-family: 'karla', sans-serif;
+}.footer,
+.header {
+}
+.ctas-button {
+	color: #444;
+}
+.ctas .twocta .ctas-button-2 {
+	border: 1px solid #333;
+	color: #333 !important;
+}@import url('https://fonts.googleapis.com/css?family=Karla:400,700');
+*,
+*:before,
+*:after {
+  margin: 0;
+  box-sizing: border-box;
+}
+body {
+  -webkit-font-smoothing: antialiased;
+}
+/*text*/
+.heading {
+  font-weight: 100;
+  font-size: 50px;
+  line-height: 68px;
+}
+@media (max-width: 900px) {
+.heading {
+    font-size: 32px;
+    line-height: 40px;
+  }
+}
+.subheading {
+  font-size: 30px;
+  line-height: 40px;
+  font-weight: 500;
+}
+@media (max-width: 900px) {
+  .subheading {
+    font-size: 26px;
+    line-height: 35px;
+  }
+}
+.paragraph {
+  font-size: 17px;
+  line-height: 32px;
+  font-weight: 100;
+}
+.heading + .paragraph {
+  margin-top: 30px;
+}
+.subheading + .paragraph {
+  margin-top: 10px;
+}
+p.paragraph {
+  color: rgba(0,0,0,.5);
+}
+
+.logo {
+  color: #fff;
+  font-size: 22px;
+  font-weight: 600;
+}
+
+@media (max-width: 420px) {
+  .logo {
+    font-size: 14px;
+  }
+}
+
+.nav-link2,
+.nav-link {
+  text-decoration: none;
+    font-family: handlee, san-serif;
+    color: #444;
+}
+.nav-link:not(:first-of-type) {
+  margin-left: 20px;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-right {
+  text-align: right;
+}
+/*flexbox styles*/
+.flex,
+.spread,
+.center,
+.right,
+.vertical,
+.centervertical {
+  display: flex;
+}
+.spread {
+  justify-content: space-between;
+}
+.center {
+  align-items: center;
+  justify-content: center;
+}
+.centervertical {
+  flex-direction: column;
+  justify-content: center;
+}
+.right {
+  justify-content: flex-end;
+}
+.vertical {
+  flex-direction: column;
+}
+/*grid*/
+.col-1,
+.col-2,
+.col-3,
+.col-4,
+.col-5,
+.col-6,
+.col-7,
+.col-8,
+.col-9,
+.col-10,
+.col-11,
+.col-12 {
+  padding: 0 20px;
+}
+.col-1 {width: 8.333333%;}
+.col-2 {width: 16.666667%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.333333%;}
+.col-5 {width: 41.666667%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.333333%;}
+.col-8 {width: 66.666667%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.333333%;}
+.col-11 {width: 91.666667%;}
+.col-12 {width: 100%;}
+
+/*containers*/
+.container-lrg,
+.container-sml {
+  margin: auto;
+  width: 100%;
+}
+.container-lrg {
+  max-width: 1080px;
+}
+.container-sml {
+  max-width: 700px;
+}
+.ctas {
+  margin: 40px 0 0 0;
+}
+.centerdevices,
+.sidedevices {
+  position: relative;
+}.header {
+	padding: 20px 0 90px 0;
+	overflow: hidden;
+}
+.header .heading {
+	margin: 120px 0 0 0;
+}
+.header .sidedevices {
+	margin: 120px 0 0;
+}
+@media (max-width: 900px) {
+	.header .flex {
+		flex-direction: column;
+	}
+	.header .heading {
+		margin-top: 60px;
+	}
+	.header .paragraph {
+		margin-top: 30px;
+		text-align: center;
+		}
+	.header .ctas {
+		text-align: center;
+	}
+	.header .col-6 {
+		width: 100%;
+	}
+	.header .sidedevices {
+		margin: 90px 0 0;
+	}
+}.ctas-input {
+	outline: none;
+	border: none;
+	border-radius: 3px;
+	font-size: 15px;
+	height: 40px;
+	line-height: 40px;
+	padding: 0 15px;
+	width: 260px;
+	display: inline-block;
+}
+.ctas-button {
+	display: inline-block;
+	margin: 0 0 0 10px;
+	height: 40px;
+	line-height: 38px;
+	padding: 0 30px;
+	background: #fff;
+	border-radius: 3px;
+	font-size: 15px;
+	font-weight: 600;
+	text-transform: uppercase;
+	letter-spacing: .3px;
+	border: 1px solid white;
+	text-decoration: none;
+}
+@media (max-width: 440px) {
+	.ctas-input,
+	.ctas-button {
+		display: block;
+		width: 100%;
+		text-align: center;
+	}
+	.ctas-button {
+		margin: 10px 0 0 0;
+	}
+}.socialproof {
+	padding: 90px 0;
+}
+.socialproof img {
+	max-height: 45px;
+	max-width: 100%;
+	margin-top: 45px;
+}
+.socialproof .logos {
+	flex-wrap: wrap;
+}
+@media (max-width: 600px) {
+	.socialproof .col-3 {
+		width: 33.33%;
+	}
+}.ctas-button,
+.ctas-button-2 {
+	display: inline-block;
+	height: 40px;
+	line-height: 38px;
+	padding: 0 30px;
+	background: #fff;
+	border-radius: 3px;
+	font-size: 15px;
+	font-weight: 600;
+	text-transform: uppercase;
+	letter-spacing: .3px;
+	border: 1px solid white;
+	text-decoration: none;
+}
+.ctas-button-2 {
+	background: transparent;
+	color: white;
+	margin: 0 0 0 10px;
+}
+@media (max-width: 440px) {
+	.ctas-button,
+	.ctas-button-2 {
+		display: block;
+		width: 100%;
+		text-align: center;
+	}
+	.ctas-button-2 {
+		margin: 10px 0 0 0;
+	}
+}.footer {
+	padding: 90px 0 45px;
+}
+.footer .footer-nav {
+	padding-top: 90px;
+	flex-wrap: wrap;
+}
+.footer .nav-link {
+	display: inline-block;
+	margin: 0 10px;
+}
+@media(max-width: 700px) {
+	.footer .footer-nav .col-3 {
+		width: 50%;
+	}
+}
+@media(max-width: 500px) {
+	.footer .footer-nav .col-3 {
+		width: 100%;
+	}
+}.ctas-button,
+.ctas-button-2 {
+	display: inline-block;
+	height: 40px;
+	line-height: 38px;
+	padding: 0 30px;
+	background: #fff;
+	border-radius: 3px;
+	font-size: 15px;
+	font-weight: 600;
+	text-transform: uppercase;
+	letter-spacing: .3px;
+	border: 1px solid white;
+	text-decoration: none;
+}
+.ctas-button-2 {
+	background: transparent;
+	color: white;
+	margin: 0 0 0 10px;
+}
+@media (max-width: 440px) {
+	.ctas-button,
+	.ctas-button-2 {
+		display: block;
+		width: 100%;
+		text-align: center;
+	}
+	.ctas-button-2 {
+		margin: 10px 0 0 0;
+	}
+}.feature5 {
+	padding: 90px 0;
+	overflow: hidden;
+	border-bottom: 1px solid rgba(0,0,0,.1);
+}
+.feature5 .sidedevices {
+	margin-top: 90px;
+}
+.feature5 .emoji {
+	width: 44px;
+	height: 44px;
+	position: absolute;
+	transform: translate3d(calc(-100% - 20px),0,0);
+	/*delete this*/
+	min-width: inherit;
+	z-index: 9999;
+}
+.feature5 .emoji b {
+	font-size: 40px;
+}
+.feature5 .steps:not(:last-of-type) {
+	margin-bottom: 20px;
+}
+@media (max-width: 900px) {
+	.feature5 .header-images {
+		min-height: inherit;
+		margin-top: 60px;
+	}
+	.feature5 .heading {
+		margin-bottom: 50px;
+	}
+	.feature5 .flex {
+		flex-direction: column;
+	}
+	.feature5 .centervertical {
+		flex-direction: row;
+	}
+	.feature5 .steps {
+		width: 33.33%;
+		padding: 0 20px;
+	}
+	.feature5 .emoji {
+		transform: none;
+		position: relative;
+	}
+	.feature5	.col-5,
+	.feature5	.col-6 {
+		width: 100%;
+	}
+}
+
+@media (max-width: 750px) {
+  .feature5 .centervertical {
+  	flex-wrap: wrap;
+  }
+  .feature5 .steps:nth-of-type(1) {
+  	width: 100%;
+  	margin-bottom: 30px;
+  }
+  .feature5 .steps:not(:nth-of-type(1)) {
+  	width: 50%;
+  }
+}
+
+@media (max-width: 500px) {
+	.feature5 .steps:nth-of-type(1) {
+		margin-bottom: 0;
+	}
+  .feature5 .steps:not(:nth-of-type(1)) {
+  	width: 100%;
+  	margin-top: 30px;
+  }
 }
