--- a/client-ind/css/main.css
+++ b/client-ind/css/main.css
@@ -761,7 +761,7 @@ form small {
 
 #element-for-environment {
    position: relative;
-   background-image: linear-gradient(to top, #63b32e, #112131);
+   background-image: linear-gradient(to top, #63b32e, #fff);
 }
  
 #back-environment {
@@ -770,6 +770,6 @@ form small {
    left: 0;
    width: 100%;
    height: 68%;
-   background-image: linear-gradient(to top, #ffffff, #077ff7);
+   background-image: linear-gradient(to top, #63b32e, #fff);
    opacity: 0.7;
 }
